[MacCatalyst] Fix Mac Catalyst build https://bugs.webkit.org/show_bug.cgi?id=234067

Unreviewed.

There's a compile error:

Source/WebCore/platform/audio/ios/AudioSessionIOS.mm:247:5: error: 'auto' deduced as 'id' in declaration of 'session' [-Werror,-Wauto-var-id]
auto *session = [PAL::getAVAudioSessionClass() sharedInstance];
^~~~~~~~~~~~~

No new tests because there is no behavior change.

* platform/audio/ios/AudioSessionIOS.mm:
(WebCore::setEligibleForSmartRouting):
(WebCore::AudioSessionIOS::setPresentingProcesses):
(WebCore::AudioSessionIOS::setCategory):


Canonical link: https://commits.webkit.org/245000@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286759 268f45cc-cd09-0410-ab3c-d52691b4dbfc